--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: <a href="https://github.com/Hendejac/Protein-Conformations">Detecting Differences in Protein Conformation with the Random Forest Classifiery</a> # your name (or website title) here
+title: <a href="https://github.com/Hendejac/Protein-Conformations">Detecting Differences in Protein Conformation with the Random Forest Classifier</a> # your name (or website title) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Using feature importance from the Random Forest classifier to identify regions of conformaional difference.
   <br>
